--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "rdbkp2"
 version = "0.1.0"
 edition = "2021"
-authors = ["<AUTHOR_NAME> <<AUTHOR_EMAIL>>"]
+authors = ["unic <yuniqueunic@gmail.com>"]
 description = "A CLI tool for backing up and restoring Docker container data"
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/<GITHUB_USERNAME>/rdbkp2"
-repository = "https://github.com/<GITHUB_USERNAME>/rdbkp2"
+homepage = "https://github.com/yuniqueunic/rdbkp2"
+repository = "https://github.com/yuniqueunic/rdbkp2"
 keywords = ["docker", "backup", "cli", "container", "volume"]
 categories = ["command-line-utilities", "development-tools"]
 
