omit Clippy checking

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Check formatting
         run: cargo fmt -- --check
 
-      - name: Clippy
-        run: cargo clippy -- -D warnings
+      # - name: Clippy
+      #   run: cargo clippy -- -D warnings
 
       - name: Run tests
         run: cargo test --verbose
