feat(completions): 添加命令行补全功能
- 支持 Bash、Zsh、Fish 和 PowerShell 的命令行补全
- 新增 completions 命令生成补全脚本
- 更新 README 添加补全功能说明
- 修改 Cargo.toml 添加 clap_complete 依赖

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["command-line-utilities", "development-tools"]
 [dependencies]
 # CLI 参数解析
 clap = { version = "4.5.1", features = ["derive"] }
+clap_complete = "4.5.1"
 # CLI 交互
 dialoguer = "0.11.0"
 # Docker API
