build(ci): 优化持续集成构建流程
- 为所有目标添加 cross 构建支持
- 更新构建步骤以使用 cross 或 cargo 构建
- 安装 cross 作为构建依赖项
- 更新项目版本至 0.2.1
- 更新 Cargo.toml 中的版本号
- 在 .vscode/settings.json 中添加新依赖项

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "dialoguer",
         "pwsh",
         "rdbkp",
-        "walkdir"
+        "walkdir",
+        "winapi",
+        "winerror"
     ]
 }
