--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,18 +55,23 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             suffix: linux-x86_64
+            use_cross: true
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             suffix: linux-aarch64
+            use_cross: true
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             suffix: windows-x86_64.exe
+            use_cross: false
           - os: macos-latest
             target: x86_64-apple-darwin
             suffix: darwin-x86_64
+            use_cross: false
           - os: macos-latest
             target: aarch64-apple-darwin
             suffix: darwin-aarch64
+            use_cross: false
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -77,15 +82,18 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install cross-compilation tools
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
+      - name: Install cross
+        if: matrix.use_cross
+        run: cargo install cross
 
       - name: Build binary
         run: |
-          cargo build --release --target ${{ matrix.target }}
+          if [ "${{ matrix.use_cross }}" = "true" ]; then
+            cross build --release --target ${{ matrix.target }}
+          else
+            cargo build --release --target ${{ matrix.target }}
+          fi
+        shell: bash
 
       - name: Prepare binary
         shell: bash
