--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches: [main]
 
+# 添加顶级权限配置
+permissions:
+  contents: write
+  packages: write
+
 env:
   CARGO_TERM_COLOR: always
   RUST_LOG: info
@@ -115,6 +120,9 @@ jobs:
     needs: [build-release]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
+    # 为这个 job 单独设置权限
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
