--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,8 @@ codegen-units = 1
 panic = 'abort'
 strip = true
 opt-level = 3
+
+[dev-dependencies]
+assert_fs = "1.0"
+predicates = "3.0"
+reqwest = { version = "0.11", features = ["json"] }
