♻️ refactor(docker): update docker configuration and dependencies
- replace config.yaml with config.ini for configuration management
- modify Dockerfile for updated dependencies
- update docker-compose.yaml for new configuration
- refactor simServer.py and simServerDepend.py for compatibility

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,11 +4,8 @@ FROM python:3.9-alpine
 # Set working directory
 WORKDIR /app
 
-# Install required packages
-RUN pip install pyyaml
-
 # Copy the Python scripts and config
-COPY simServer.py simServerDepend.py config.yaml ./
+COPY simServer.py simServerDepend.py config.ini ./
 
 # Create data directory
 RUN mkdir data
