--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -27,8 +27,25 @@ services:
         max-file: "3"
     # Health check
     healthcheck:
-      test: [ "CMD", "wget", "--spider", "-q", "http://localhost:8666" ]
+      test:
+        [
+          "CMD",
+          "echo -e 'GET /health HTTP/1.1
+
+            Host: localhost
+
+            Connection: close
+
+
+            ' | nc localhost 8666 | grep -q '\"status\": \"healthy\"'"
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 5s
+    # healthcheck:
+    #   test: [ "CMD", "wget", "--spider", "-q", "http://localhost:8666" ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 5s
