✨ feat(commands): update dependencies and modules
- modified Cargo.lock to reflect updated dependencies
- updated Cargo.toml with new package versions
- refactor src/commands/mod.rs to match updated dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ walkdir = "2.4.0"
 # 时间处理
 chrono = "0.4.34"
 winapi = { version = "0.3.9", features = ["winerror"] }
+tempfile = "3.17.1"
 
 [profile.release]
 lto = true
