--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ walkdir = "2.4.0"
 chrono = "0.4.34"
 winapi = { version = "0.3.9", features = ["winerror"] }
 tempfile = "3.17.1"
+fs_extra = "1.3.0"
 
 [profile.release]
 lto = true
