--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ chrono = "0.4.34"
 winapi = { version = "0.3.9", features = ["winerror"] }
 tempfile = "3.17.1"
 fs_extra = "1.3.0"
+dunce = "1.0.5"
 
 [profile.release]
 lto = true
