--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,18 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 walkdir = "2.4.0"
 # 时间处理
 chrono = "0.4.34"
+# windows api
 winapi = { version = "0.3.9", features = ["winerror"] }
+# 临时文件
 tempfile = "3.17.1"
+# 文件系统操作增强
 fs_extra = "1.3.0"
+# 文件系统路径操作
 dunce = "1.0.5"
+
+# Mock 测试
+mockall = "0.13.1"
+
 
 [profile.release]
 lto = true
