--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: [main]
 
-# 添加顶级权限配置
+# Add top-level permissions configuration
 permissions:
   contents: write
   packages: write
@@ -120,7 +120,7 @@ jobs:
     needs: [build-release]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
-    # 为这个 job 单独设置权限
+    # Set permissions for this job specifically
     permissions:
       contents: write
       packages: write
@@ -133,8 +133,20 @@ jobs:
       - name: Generate changelog
         id: changelog
         run: |
-          CHANGELOG=$(git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:"%s")
-          printf "changelog=%s\n" "$CHANGELOG" >> $GITHUB_OUTPUT
+          # Get the previous tag
+          PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          
+          if [ -z "$PREV_TAG" ]; then
+            # If no previous tag exists, get all commits
+            echo "CHANGELOG<<EOF" >> $GITHUB_ENV
+            git log --pretty=format:"* %s" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+          else
+            # Get commits between the previous tag and current tag
+            echo "CHANGELOG<<EOF" >> $GITHUB_ENV
+            git log ${PREV_TAG}..HEAD --pretty=format:"* %s" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+          fi
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
@@ -151,7 +163,7 @@ jobs:
             Release ${{ github.ref_name }}
 
             Changes:
-            ${{ steps.changelog.outputs.changelog }}
+            ${{ env.CHANGELOG }}
           draft: false
           prerelease: false
 
