refactor(docker, src): improve containerization and dependency management
- update Dockerfile for better image creation
- modify docker-compose.yaml for enhanced service orchestration
- adjust simServer.py and simServerDepend.py for improved simulation servers
- redefine justfile for optimized task automation
- refactor mod.rs and prompt.rs in src/commands for enhanced command handling
- modify src/config/mod.rs for better configuration management
- update src/docker/mod.rs for improved docker integration
- refine src/utils/path.rs for enhanced path handling

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,14 +4,23 @@ FROM python:3.9-alpine
 # Set working directory
 WORKDIR /app
 
-# Copy the Python scripts and config
-COPY simServer.py simServerDepend.py config.ini ./
+# Copy the Python scripts
+COPY simServer.py simServerDepend.py ./
 
 # Create data directory
-RUN mkdir data
+RUN mkdir config
+
+# Copy the config
+COPY config.ini config/
 
 # Expose port 8666
 EXPOSE 8666
+
+# Replace the default Alpine mirror with the Alibaba Cloud mirror
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+
+# Install dependencies
+RUN apk add --no-cache curl
 
 # Mount point for data volume
 VOLUME ["/app/data"]
