--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   sim-server:
     build: .
@@ -7,10 +5,8 @@ services:
     ports:
       - "8666:8666"
     volumes:
-      - ./data:/app/data
-      - ./simServer.py:/app/simServer.py
-      - ./simServerDepend.py:/app/simServerDepend.py
-      - ./config.ini:/app/config.ini
+      - /home/unic/downloads/testd/py/data:/app/data
+      - /home/unic/downloads/testd/py/config:/app/config
     restart: unless-stopped
     # Resource limits - 移除 memory 相关限制以避免 swap 警告
     deploy:
@@ -27,18 +23,7 @@ services:
         max-file: "3"
     # Health check
     healthcheck:
-      test:
-        [
-          "CMD",
-          "echo -e 'GET /health HTTP/1.1
-
-            Host: localhost
-
-            Connection: close
-
-
-            ' | nc localhost 8666 | grep -q '\"status\": \"healthy\"'"
-        ]
+      test: [ "CMD", "curl", "http://localhost:8666/health" ]
       interval: 30s
       timeout: 10s
       retries: 3
