--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ repository = "https://github.com/yuniqueunic/rdbkp2"
 keywords = ["docker", "backup", "cli", "container", "volume"]
 categories = ["command-line-utilities", "development-tools"]
 
+
+# 公共依赖，所有平台都会使用
 [dependencies]
 # CLI 参数解析
 clap = { version = "4.5.1", features = ["derive"] }
@@ -37,17 +39,29 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 walkdir = "2.4.0"
 # 时间处理
 chrono = "0.4.34"
-# windows api
-winapi = { version = "0.3.9", features = ["winerror"] }
 # 临时文件
 tempfile = "3.17.1"
 # 文件系统操作增强
 fs_extra = "1.3.0"
 # 文件系统路径操作
 dunce = "1.0.5"
-
 # Mock 测试
 mockall = "0.13.1"
+
+
+
+# 针对 Linux 的依赖
+[target.'cfg(target_os = "linux")'.dependencies]
+
+# 针对 Windows 的依赖
+[target.'cfg(target_os = "windows")'.dependencies]
+# windows api
+winapi = { version = "0.3.9", features = ["securitybaseapi", "winerror"] }
+# 运行命令
+runas = "1.2.0"
+
+# 针对 macOS 的依赖
+[target.'cfg(target_os = "macos")'.dependencies]
 
 
 [profile.release]
