--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ fs_extra = "1.3.0"
 dunce = "1.0.5"
 # Mock 测试
 mockall = "0.13.1"
-
+privilege = "0.3.0"
 
 
 # 针对 Linux 的依赖
@@ -56,7 +56,11 @@ mockall = "0.13.1"
 # 针对 Windows 的依赖
 [target.'cfg(target_os = "windows")'.dependencies]
 # windows api
-winapi = { version = "0.3.9", features = ["securitybaseapi", "winerror"] }
+# winapi = { version = "0.3.9", features = [
+#     "securitybaseapi",
+#     "winerror",
+#     "shellapi",
+# ] }
 # 运行命令
 runas = "1.2.0"
 
