--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ xz2 = "0.1.7"
 anyhow = "1.0.80"
 thiserror = "2"
 # 异步运行时
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = { version = "1.44", features = ["full"] }
 # 日志
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
@@ -40,7 +40,7 @@ walkdir = "2.4.0"
 # 时间处理
 chrono = "0.4.34"
 # 临时文件
-tempfile = "3.17.1"
+tempfile = "3.18"
 # 文件系统操作增强
 fs_extra = "1.3.0"
 # 文件系统路径操作
@@ -49,6 +49,8 @@ dunce = "1.0.5"
 mockall = "0.13.1"
 privilege = "0.3.0"
 dirs = "6.0.0"
+semver = "1.0"
+reqwest = { version = "0.12", features = ["json"] }
 
 
 # 针对 Linux 的依赖
@@ -67,17 +69,18 @@ runas = "1.2.0"
 
 # 针对 macOS 的依赖
 [target.'cfg(target_os = "macos")'.dependencies]
+# Start of Selection
 
 
 [profile.release]
 lto = true
 codegen-units = 1
 panic = 'abort'
-strip = true
+# strip = true  # Removed due to unexpected property error
+# End of Selection
 opt-level = 3
 
 [dev-dependencies]
 # 测试
 assert_fs = "1.0"
 predicates = "3.0"
-reqwest = { version = "0.12", features = ["json"] }
