--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,6 @@ dirs = "6.0.0"
 semver = "1.0"
 reqwest = { version = "0.12", features = ["json"] }
 
-
 # 针对 Linux 的依赖
 [target.'cfg(target_os = "linux")'.dependencies]
 
@@ -76,6 +75,7 @@ runas = "1.2.0"
 lto = true
 codegen-units = 1
 panic = 'abort'
+version = "*"
 # strip = true  # Removed due to unexpected property error
 # End of Selection
 opt-level = 3
