feat(i18n): add internationalization support
- add i18n-ally configuration for VSCode
- create initial locale file (app.yml)
- update Cargo dependencies for i18n
- modify config and lib to support localization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
         "walkdir",
         "winapi",
         "winerror"
-    ]
+    ],
+    "i18n-ally.localesPaths": [
+        "locales"
+    ],
+    "i18n-ally.sourceLanguage": "app"
 }
