--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,21 +84,47 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
+      
       # Install OpenSSL for Linux builds (for non-cross builds)
       - name: Install OpenSSL (Ubuntu)
         if: runner.os == 'Linux' && matrix.use_cross != true
         run: |
           sudo apt-get update
           sudo apt-get install -y pkg-config libssl-dev
-      # Install OpenSSL for macOS builds
-      - name: Install OpenSSL (macOS)
+      
+      # Install dependencies for macOS builds
+      - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
+          # Install OpenSSL
           brew install openssl@3
           echo "OPENSSL_DIR=$(brew --prefix openssl@3)" >> $GITHUB_ENV
+          
+          # Install XZ utils with universal binaries for both architectures
+          if [ "${{ matrix.target }}" = "x86_64-apple-darwin" ]; then
+            # For x86_64 target, we need to ensure we have x86_64 libraries
+            brew uninstall --ignore-dependencies xz || true
+            
+            # Install xz from source with universal binary support
+            curl -L https://github.com/tukaani-project/xz/releases/download/v5.6.1/xz-5.6.1.tar.gz -o xz.tar.gz
+            tar -xzf xz.tar.gz
+            cd xz-*
+            
+            # Configure and build for x86_64
+            ./configure --prefix=/usr/local --disable-dependency-tracking --disable-shared --enable-static "CFLAGS=-arch x86_64" "LDFLAGS=-arch x86_64"
+            make -j$(sysctl -n hw.ncpu)
+            sudo make install
+            cd ..
+            
+            # Set environment variables to use the static library
+            echo "LZMA_API_STATIC=1" >> $GITHUB_ENV
+            echo "PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
+          fi
+      
       - name: Install cross
         if: matrix.use_cross
         run: cargo install cross
+      
       # 修改 Cargo.toml 以使用 vendored 特性
       - name: Configure OpenSSL vendored feature
         if: matrix.use_cross
@@ -108,17 +134,34 @@ jobs:
           [dependencies.openssl-sys]
           version = "*"
           features = ["vendored"]' >> Cargo.toml
+      
+      # Add static linking for xz2 on macOS x86_64
+      - name: Configure static linking for xz2
+        if: runner.os == 'macOS' && matrix.target == 'x86_64-apple-darwin'
+        run: |
+          # Add static linking configuration to Cargo.toml
+          echo '
+          [dependencies.xz2]
+          version = "0.1.7"
+          features = ["static"]' >> Cargo.toml
+      
       - name: Build binary
         run: |
           if [ "${{ matrix.use_cross }}" = "true" ]; then
             cross build --release --target ${{ matrix.target }}
           else
-            cargo build --release --target ${{ matrix.target }}
+            # For macOS x86_64, we need to ensure we're using the right architecture
+            if [ "${{ runner.os }}" = "macOS" ] && [ "${{ matrix.target }}" = "x86_64-apple-darwin" ]; then
+              RUSTFLAGS="-C link-arg=-arch -C link-arg=x86_64" cargo build --release --target ${{ matrix.target }}
+            else
+              cargo build --release --target ${{ matrix.target }}
+            fi
           fi
         shell: bash
         env:
           OPENSSL_STATIC: 1
           PKG_CONFIG_ALLOW_CROSS: 1
+      
       - name: Prepare binary
         shell: bash
         run: |
@@ -127,11 +170,13 @@ jobs:
           else
             cp target/${{ matrix.target }}/release/${{ env.BINARY_NAME }} ${{ env.BINARY_NAME }}-${{ matrix.suffix }}
           fi
+      
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.BINARY_NAME }}-${{ matrix.suffix }}
           path: ${{ env.BINARY_NAME }}-${{ matrix.suffix }}
+  
   create-release:
     name: Create Release
     needs: [build-release]
@@ -167,6 +212,7 @@ jobs:
           body_path: changelog.md
           draft: false
           prerelease: false
+  
   publish-crate:
     name: Publish to crates.io
     needs: [create-release]
