--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ privilege = "0.3.0"
 dirs = "6.0.0"
 semver = "1.0"
 reqwest = { version = "0.12", features = ["json"] }
+rust-i18n = "3.1.3"
 
 # 针对 Linux 的依赖
 [target.'cfg(target_os = "linux")'.dependencies]
