--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,20 +100,25 @@ jobs:
           brew install openssl@3
           echo "OPENSSL_DIR=$(brew --prefix openssl@3)" >> $GITHUB_ENV
           
-          # For x86_64 target on macOS, we need to handle the architecture mismatch
+          # For x86_64 target on macOS
           if [ "${{ matrix.target }}" = "x86_64-apple-darwin" ]; then
-            # Install xz with universal binary support using Homebrew
-            brew install --build-from-source xz
+            # Remove existing xz if any
+            brew uninstall xz || true
             
-            # Set environment variables for static linking
+            # Install xz with both architectures
+            arch -x86_64 brew install --build-from-source xz
+            
+            # Set environment variables
             echo "LZMA_API_STATIC=1" >> $GITHUB_ENV
+            echo "XZ_STATIC=1" >> $GITHUB_ENV
+            echo "PKG_CONFIG_PATH=/usr/local/opt/xz/lib/pkgconfig" >> $GITHUB_ENV
           fi
       
       - name: Install cross
         if: matrix.use_cross
         run: cargo install cross
       
-      # Configure static linking for xz2 and other dependencies on macOS x86_64
+      # Configure static linking for macOS x86_64
       - name: Configure static linking for macOS x86_64
         if: runner.os == 'macOS' && matrix.target == 'x86_64-apple-darwin'
         run: |
@@ -129,10 +134,6 @@ jobs:
           
           # Add static linking configuration to Cargo.toml
           echo '
-          [dependencies.xz2]
-          version = "0.1.7"
-          features = ["static"]
-          
           [dependencies.openssl-sys]
           version = "*"
           features = ["vendored"]' >> Cargo.toml
