--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdbkp2"
-version = "2.1.7"
+version = "2.1.3"
 edition = "2024"
 authors = ["unic <yuniqueunic@gmail.com>"]
 description = "A CLI tool for backing up and restoring Docker container data"
@@ -50,10 +50,15 @@ mockall = "0.13.1"
 privilege = "0.3.0"
 dirs = "6.0.0"
 semver = "1.0"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = [
+    "json",
+    "blocking",
+    "rustls-tls",
+], default-features = false }
 rust-i18n = "3.1.3"
 # OpenSSL
-openssl-sys = { version = "0.9", features = ["vendored"] }
+# 改用 rustls 替代 openssl, 避免交叉编译问题
+# openssl-sys = { version = "0.9", features = ["vendored"] }
 
 # 针对 Linux 的依赖
 [target.'cfg(target_os = "linux")'.dependencies]
